--- a/Content_Creater.html
+++ b/Content_Creater.html
@@ -838,17 +838,57 @@
                             <div class="service__details__planning__heading">
                                 <h3>Creative Collaboration</h3>
                             </div>
-                            <p>Customer care is a central aspect of our team’s function, especially as we help you to refine ideas and concepts to actualize your vision. What’s more, each piece of content is in line with the brand you wish to convey and communicates this clearly.</p>
+                            <p>Customer care is a central aspect of our team’s function, especially as we help you to
+                                refine ideas and concepts to actualize your vision. What’s more, each piece of content
+                                is in line with the brand you wish to convey and communicates this clearly.</p>
                         </div>
                         <div class="service__details__planning__text">
                             <div class="service__details__planning__heading">
-                                <h3>Blog Writing</h3>
+                                <h3>Focus on Quality</h3>
                             </div>
-                            <p>Blogs are a powerful and useful tool to post information, offer
-                                knowledge in the digital sphere, and become an expert in your field.
-                                Our professional blog writers produce quality, informative, and
-                                persuasive blog articles that create traffic to your site.</p>
+                            <p>Digital Minds On values quality, we do our best to provide only the highest level of
+                                services to our clients. It must be noted that all our work goes through a strict
+                                editorial check to meet maximally professional standards.</p>
                         </div>
+                        <div class="service__details__planning__text">
+                            <div class="service__details__planning__heading">
+                                <h3>Data-Driven Insights</h3>
+                            </div>
+                            <p></p>
+                        </div>
+                        <div class="service__details__planning__text">
+                            <div class="service__details__planning__heading">
+                                <h3>Data-Driven Insights</h3>
+                            </div>
+                            <p>Analytics help improve and transform content marketing to reach the necessary engagement
+                                and conversion goals for all your content.</p>
+                        </div>
+                        <div class="service__details__planning__text">
+                            <div class="service__details__planning__heading">
+                                <h2>Why Choose Digital Minds On?</h2>
+                            </div>
+                            <p></b>Expert Team:</b> We have writers, designers, and strategists who all work and bring
+                                out their creativity on every project.</p>
+                            <p><b>Customized Solutions:</b> OUR services include customized content solutions to fit the
+                                specific needs of your enterprise.</p>
+                            <p><b>Commitment to Excellence:</b> We pride ourselves on providing content that does not
+                                only meet the needs of the target audience but goes beyond that.</p>
+
+                        </div>
+
+                        <div class="service__details__planning__text">
+                            <div class="service__details__planning__heading">
+                                <h2>Conclusion</h2>
+                            </div>
+                            <p>Digital Minds On have come across the best content can indeed revolutionise companies. We
+                                ensure that through creativity, strategy and innovation brands are able to build and
+                                communicate their narratives within the market. Whether you need professional content in
+                                order to expand the range of activity on websites and blogs or to increase the
+                                effectiveness of cooperation with an audience through conversion, you can find this at
+                                our site.
+                            </p>
+                        </div>
+
                         <div class="service__details__button" data-aos="fade-up" data-aos-duration="1500">
                             <a class="default__button" href="#">GET A FREE QUOTE</a>
                         </div>
