footer javscript avoid

--- a/about.html
+++ b/about.html
@@ -192,8 +192,6 @@
                             </div>
                             <div class="headerarea__component">
                                 <div class="headerarea__right">
-
-                                 
                                     <div class="headerarea__button">
                                         <a class="default__button" href="request.html">GET FREE QUATE</a>
                                     </div>
@@ -1053,10 +1051,10 @@
                             <div class="copyright__right">
                                 <ul>
                                     <li>
-                                        <a href="#">Privacy & Policy ||</a>
+                                        <a href="javascript:avoid()">Privacy & Policy ||</a>
                                     </li>
                                     <li>
-                                        <a href="#">Terms & Conditions</a>
+                                        <a href="javascript:avoid()">Terms & Conditions</a>
                                     </li>
                                 </ul>
 
