--- a/seo.html
+++ b/seo.html
@@ -1045,7 +1045,7 @@
                             <div class="copyright__right">
                                 <ul>
                                     <li>
-                                        <a href="#">Privacy & Policy ||</a>
+                                        <a href="javascript:avoid()">Privacy & Policy ||</a>
                                     </li>
                                     <li>
                                         <a href="#">Terms & Conditions</a>
