--- a/index.html
+++ b/index.html
@@ -1578,10 +1578,10 @@
                             <div class="copyright__right">
                                 <ul>
                                     <li>
-                                        <a href="#">Privacy & Policy ||</a>
+                                        <a href="javascript:avoid()">Privacy & Policy ||</a>
                                     </li>
                                     <li>
-                                        <a href="#">Terms & Conditions</a>
+                                        <a href="javascript:avoid()">Terms & Conditions</a>
                                     </li>
                                 </ul>
 
