--- a/about.html
+++ b/about.html
@@ -82,7 +82,7 @@
 
                     <div class="header__animate__item">
                         <i class="icofont-email"></i>
-                        <h3><a href="mailto:info@digitalmindson.com">info@digitalmindson.com</a></h3>
+                        <h3><a href="mailto:muhammedahmadraza72@gmail.com">muhammedahmadraza72@gmail.com</a></h3>
                     </div>
                     <div class="header__animate__item">
                         <i class="icofont-phone"></i>
@@ -91,7 +91,7 @@
 
                     <div class="header__animate__item">
                         <i class="icofont-email"></i>
-                        <h3><a href="mailto:info@digitalmindson.com">info@digitalmindson.com</a></h3>
+                        <h3><a href="mailto:muhammedahmadraza72@gmail.com">muhammedahmadraza72@gmail.com</a></h3>
                     </div>
                     <div class="header__animate__item">
                         <i class="icofont-phone"></i>
@@ -100,7 +100,7 @@
 
                     <div class="header__animate__item">
                         <i class="icofont-email"></i>
-                        <h3><a href="mailto:info@digitalmindson.com">info@digitalmindson.com</a></h3>
+                        <h3><a href="mailto:muhammedahmadraza72@gmail.com">muhammedahmadraza72@gmail.com</a></h3>
                     </div>
                     <div class="header__animate__item">
                         <i class="icofont-phone"></i>
@@ -109,7 +109,7 @@
 
                     <div class="header__animate__item">
                         <i class="icofont-email"></i>
-                        <h3><a href="mailto:info@digitalmindson.com">info@digitalmindson.com</a></h3>
+                        <h3><a href="mailto:muhammedahmadraza72@gmail.com">muhammedahmadraza72@gmail.com</a></h3>
                     </div>
                     <div class="header__animate__item">
                         <i class="icofont-phone"></i>
@@ -118,7 +118,7 @@
 
                     <div class="header__animate__item">
                         <i class="icofont-email"></i>
-                        <h3><a href="mailto:info@digitalmindson.com">info@digitalmindson.com</a></h3>
+                        <h3><a href="mailto:muhammedahmadraza72@gmail.com">muhammedahmadraza72@gmail.com</a></h3>
                     </div>
                 </div>
             </div>
