--- a/appdevelop.html
+++ b/appdevelop.html
@@ -85,7 +85,7 @@
 
                     <div class="header__animate__item">
                         <i class="icofont-email"></i>
-                        <h3><a href="mailto:info@digitalmindson.com">info@digitalmindson.com</a></h3>
+                        <h3><a href="mailto:muhammedahmadraza72@gmail.com">muhammedahmadraza72@gmail.com</a></h3>
                     </div>
                     <div class="header__animate__item">
                         <i class="icofont-phone"></i>
@@ -94,7 +94,7 @@
 
                     <div class="header__animate__item">
                         <i class="icofont-email"></i>
-                        <h3><a href="mailto:info@digitalmindson.com">info@digitalmindson.com</a></h3>
+                        <h3><a href="mailto:muhammedahmadraza72@gmail.com">muhammedahmadraza72@gmail.com</a></h3>
                     </div>
                     <div class="header__animate__item">
                         <i class="icofont-phone"></i>
@@ -103,7 +103,7 @@
 
                     <div class="header__animate__item">
                         <i class="icofont-email"></i>
-                        <h3><a href="mailto:info@digitalmindson.com">info@digitalmindson.com</a></h3>
+                        <h3><a href="mailto:muhammedahmadraza72@gmail.com">muhammedahmadraza72@gmail.com</a></h3>
                     </div>
                     <div class="header__animate__item">
                         <i class="icofont-phone"></i>
@@ -112,7 +112,7 @@
 
                     <div class="header__animate__item">
                         <i class="icofont-email"></i>
-                        <h3><a href="mailto:info@digitalmindson.com">info@digitalmindson.com</a></h3>
+                        <h3><a href="mailto:muhammedahmadraza72@gmail.com">muhammedahmadraza72@gmail.com</a></h3>
                     </div>
                     <div class="header__animate__item">
                         <i class="icofont-phone"></i>
@@ -121,7 +121,7 @@
 
                     <div class="header__animate__item">
                         <i class="icofont-email"></i>
-                        <h3><a href="mailto:info@digitalmindson.com">info@digitalmindson.com</a></h3>
+                        <h3><a href="mailto:muhammedahmadraza72@gmail.com">muhammedahmadraza72@gmail.com</a></h3>
                     </div>
                 </div>
             </div>
