--- a/request.html
+++ b/request.html
@@ -140,42 +140,29 @@
         <div class="header__animate bg__black">
             <div class="container-fluid">
                 <div class="header__animate__wraper">
-
                     <div class="header__animate__item">
                         <i class="icofont-phone"></i>
                         <h3><a href="tel:(+92)3086582833">+92 3086582833</a></h3>
                     </div>
-
                     <div class="header__animate__item">
                         <i class="icofont-email"></i>
-                        <h3><a href="mailto:info@digitalmindson.com">info@digitalmindson.com</a></h3>
-                    </div>
-                    <div class="header__animate__item">
-                        <i class="icofont-phone"></i>
-                        <h3><a href="tel:(+92)3086582833">+92 3086582833</a></h3>
-                    </div>
-
-                    <div class="header__animate__item">
-                        <i class="icofont-email"></i>
-                        <h3><a href="mailto:info@digitalmindson.com">info@digitalmindson.com</a></h3>
+                        <h3><a href="mailto:muhammedahmadraza72@gmail.com">muhammedahmadraza72@gmail.com</a></h3>
                     </div>
                     <div class="header__animate__item">
                         <i class="icofont-phone"></i>
                         <h3><a href="tel:(+92)3086582833">+92 3086582833</a></h3>
                     </div>
-
                     <div class="header__animate__item">
                         <i class="icofont-email"></i>
-                        <h3><a href="mailto:info@digitalmindson.com">info@digitalmindson.com</a></h3>
+                        <h3><a href="mailto:muhammedahmadraza72@gmail.com">muhammedahmadraza72@gmail.com</a></h3>
                     </div>
                     <div class="header__animate__item">
                         <i class="icofont-phone"></i>
                         <h3><a href="tel:(+92)3086582833">+92 3086582833</a></h3>
                     </div>
-
                     <div class="header__animate__item">
                         <i class="icofont-email"></i>
-                        <h3><a href="mailto:info@digitalmindson.com">info@digitalmindson.com</a></h3>
+                        <h3><a href="mailto:muhammedahmadraza72@gmail.com">muhammedahmadraza72@gmail.com</a></h3>
                     </div>
                     <div class="header__animate__item">
                         <i class="icofont-phone"></i>
@@ -184,7 +171,15 @@
 
                     <div class="header__animate__item">
                         <i class="icofont-email"></i>
-                        <h3><a href="mailto:info@digitalmindson.com">info@digitalmindson.com</a></h3>
+                        <h3><a href="mailto:muhammedahmadraza72@gmail.com">muhammedahmadraza72@gmail.com</a></h3>
+                    </div>
+                    <div class="header__animate__item">
+                        <i class="icofont-phone"></i>
+                        <h3><a href="tel:(+92)3086582833">+92 3086582833</a></h3>
+                    </div>
+                    <div class="header__animate__item">
+                        <i class="icofont-email"></i>
+                        <h3><a href="mailto:muhammedahmadraza72@gmail.com">muhammedahmadraza72@gmail.com</a></h3>
                     </div>
                 </div>
             </div>
