--- a/uidesign.html
+++ b/uidesign.html
@@ -630,7 +630,7 @@
                                 <div class="row">
                                     <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
                                         <div class="service__details__planning__img">
-                                            <img src="assets/img/service/service__details__2.png" alt="">
+                                            <img src="assets/img/service/Video/uidesin.mp4" alt="">
                                         </div>
                                     </div>
                                     <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
