--- a/appdevelop.html
+++ b/appdevelop.html
@@ -160,7 +160,7 @@
                                                     <li><a href="software.html">Software Development</a></li>
                                                     <li><a href="appdevelop.html">App Development</a></li>
                                                     <li><a href="GameDevelop.html">Game Development</a></li>
-                                                    <!-- <li><a href="digtalmarketing.html">Digital Marketing</a></li> -->
+                                                    <li><a href="digtalmarketing.html">Digital Marketing</a></li>
                                                     <li><a href="uidesign.html">UI/UX Design</a></li>
                                                     <li><a href="itexpert.html">IT Specialist</a></li>
                                                     <li><a href="wordpress.html">WordPress Development </a></li>
