--- a/uidesign.html
+++ b/uidesign.html
@@ -190,7 +190,7 @@
                             <div class="headerarea__component">
                                 <div class="headerarea__right">
 
-                                    
+
                                     <div class="headerarea__button">
                                         <a class="default__button" href="request.html">GET FREE QUATE</a>
                                     </div>
@@ -629,9 +629,13 @@
                             <div class="service__details__planning" data-aos="fade-up" data-aos-duration="1500">
                                 <div class="row">
                                     <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
-                                        <div class="service__details__planning__img">
-                                            <img src="assets/img/service/Video/uidesin.mp4" alt="">
+                                        <div class="breadcrumbarea-video-small">
+                                            <video class="breadcrumbarea__video__element" autoplay="" muted="" loop="">
+                                                <source src="assets/img/service/Video/uidesin.mp4" type="video/mp4">
+                                                Your browser does not support the video tag.
+                                            </video>
                                         </div>
+
                                     </div>
                                     <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
                                         <div class="service__details__planning__inner">
