app video fixed

--- a/appdevelop.html
+++ b/appdevelop.html
@@ -153,7 +153,7 @@
                                             <li class="headerarea__common__dropdown"><a
                                                     class="headerarea__has__dropdown" href="service.html">Services
                                                     <i class="icofont-long-arrow-down"></i></a>
-                                                    <ul
+                                                <ul
                                                     class="headerarea__submenu headerarea__submenu--five--wrap service-scrollbar">
 
                                                     <li><a href="webdevelopment.html">Web Development</a></li>
@@ -195,7 +195,7 @@
                             <div class="headerarea__component">
                                 <div class="headerarea__right">
 
-                                  
+
                                     <div class="headerarea__button">
                                         <a class="default__button" href="request.html">GET FREE QUATE</a>
                                     </div>
@@ -646,15 +646,13 @@
                             <div class="service__details__planning" data-aos="fade-up" data-aos-duration="1500">
                                 <div class="row">
                                     <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
-                                      
+
                                         <!-- video -->
                                         <div class="breadcrumbarea-video-small">
                                             <div class="breadcrumbarea__overlay-video">
                                                 <video class="breadcrumbarea__video__element" autoplay="" muted=""
                                                     loop="">
-                                                    <source
-                                                        src="assets/img/service/app deve.mp4"
-                                                        type="video/mp4">
+                                                    <source src="assets/img/service/app deve.mp4" type="video/mp4">
                                                     Your browser does not support the video tag.
                                                 </video>
                                             </div>
@@ -691,15 +689,23 @@
                                     excellent looks and great functionality. Due to this most apps are always modified
                                     according to the performance statistics that are usually recorded.</p>
                             </div>
-
+                            <div class="breadcrumbarea-video-small">
+                                <video class="breadcrumbarea__video__element" autoplay="" muted="" loop="">
+                                    <source src="assets/img/service/Video/application.mp4" type="video/mp4">
+                                    Your browser does not support the video tag.
+                                </video>
+                            </div>
                             <div class="service__details__heading" data-aos="fade-up" data-aos-duration="1500">
                                 <h2>Data Management & Analytics </h2>
                             </div>
 
                             <div class="service__details__text" data-aos="fade-up" data-aos-duration="1500">
-                                <p>Our data management and analytics services improve and analyze the potential of data
-                                    for a business. Ranging from data warehousing to predictive analytics, Digital Minds
-                                    On provide all-encompassing data solutions for efficient and excellent decisions,
+                                <p>Our data management and analytics services improve and analyze the potential of
+                                    data
+                                    for a business. Ranging from data warehousing to predictive analytics, Digital
+                                    Minds
+                                    On provide all-encompassing data solutions for efficient and excellent
+                                    decisions,
                                     strategy formulation and about customers.</p>
                             </div>
                         </div>
@@ -854,7 +860,8 @@
                         <div class="service__details__text" data-aos="fade-up" data-aos-duration="1500">
                             <p>The clients with Digital Minds On also receive sound business foundations in terms of
                                 technology
-                                as well as they also work with a strategic partner dedicated to their growth. Digital
+                                as well as they also work with a strategic partner dedicated to their growth.
+                                Digital
                                 Minds On
                                 leads with:</p>
 
@@ -865,7 +872,8 @@
                         </div>
 
                         <div class="service__details__text" data-aos="fade-up" data-aos-duration="1500">
-                            <p>Digital Minds On is a company for app development and has an expert team of mobile app
+                            <p>Digital Minds On is a company for app development and has an expert team of mobile
+                                app
                                 developers
                                 that are able to design strategies in regard to the individual problem areas,
                                 objectives, and
@@ -879,7 +887,8 @@
                         <div class="service__details__text" data-aos="fade-up" data-aos-duration="1500">
                             <p>Our support service is available for you 24/7 no matter what time it is in your local
                                 time zone.
-                                We support and help with any technical needs so that your business management processes
+                                We support and help with any technical needs so that your business management
+                                processes
                                 remain
                                 efficient.</p>
 
@@ -905,11 +914,14 @@
                                     <h3>Web and App Development </h3>
                                 </div>
                                 <div class="service__details__text" data-aos="fade-up" data-aos-duration="1500">
-                                    <p>Digital Minds On specializes in creating dynamic internet presence that meets the
+                                    <p>Digital Minds On specializes in creating dynamic internet presence that meets
+                                        the
                                         client’s vision and purpose on an individual basis. End-to-end brand sites,
                                         applications
-                                        and cross-platform brand communications that capture the spirit of a brand with
-                                        inventiveness but also within the deliverables brief, time and financial scope.
+                                        and cross-platform brand communications that capture the spirit of a brand
+                                        with
+                                        inventiveness but also within the deliverables brief, time and financial
+                                        scope.
                                     </p>
                                 </div>
 
@@ -925,7 +937,8 @@
                                 <div class="service__details__text" data-aos="fade-up" data-aos-duration="1500">
                                     <p>We provide custom software application solutions that can be interfaced with
                                         existing
-                                        structures. Digital Minds On delivers tailored solutions as far as planning and
+                                        structures. Digital Minds On delivers tailored solutions as far as planning
+                                        and
                                         deployment to improve productivity and further enhance the capabilities of
                                         teams. </p>
                                 </div>
@@ -934,15 +947,19 @@
                                     <h3>Conclusion </h3>
                                 </div>
                                 <div class="service__details__text" data-aos="fade-up" data-aos-duration="1500">
-                                    <p>Digital Minds On has a mission to help transform organizations into innovative
+                                    <p>Digital Minds On has a mission to help transform organizations into
+                                        innovative
                                         app
-                                        development solutions. We use this knowledge base to help you turn your visions
+                                        development solutions. We use this knowledge base to help you turn your
+                                        visions
                                         into
-                                        valuable applications that will boost your business and user satisfaction. We
+                                        valuable applications that will boost your business and user satisfaction.
+                                        We
                                         offer the
                                         best in quality, and support for your business while embracing state-of-art
                                         technologies
-                                        to meet the rising market challenges. Join us to become all that you can be and
+                                        to meet the rising market challenges. Join us to become all that you can be
+                                        and
                                         sustain
                                         success in a world that’s increasingly digital. </p>
                                 </div>
@@ -1032,7 +1049,8 @@
                                         <img src="assets/img/logo/full-logo.svg" alt="">
                                     </div>
                                     <div class="footer__text">
-                                        <p>Digital Minds On is a software company delivering innovative, user-centric
+                                        <p>Digital Minds On is a software company delivering innovative,
+                                            user-centric
                                             digital solutions for businesses and individuals worldwide</p>
                                     </div>
                                     <div class="footer__icon">
@@ -1129,7 +1147,8 @@
                         <div class="row align-items-center">
                             <div class="col-xl-6 col-lg-6 col-md-6 col-12">
                                 <div class="copyright__left">
-                                    <p>Copyright © 2024 <a href="index.html">Digitalminds on.</a> All Right Reserved</p>
+                                    <p>Copyright © 2024 <a href="index.html">Digitalminds on.</a> All Right Reserved
+                                    </p>
                                 </div>
                             </div>
                             <div class="col-xl-6 col-lg-6 col-md-6 col-12">
