--- a/digtalmarketing.html
+++ b/digtalmarketing.html
@@ -722,10 +722,9 @@
                                 <div class="col-md-8">
                                     <div class="card-body">
                                         <h5 class="card-title">Pay-Per-Click Advertising</h5>
-                                        <span class="card-text">Our knowledgeable team excels in
-                                            creating impactful frontend designs and dynamic,
-                                            efficient backend solutions that ensure scalability and
-                                            robust performance.</span>
+                                        <span class="card-text">Maximize your ROI with Pay-Per-Click Advertising. Drive
+                                            targeted traffic, boost conversions, and achieve measurable results with our
+                                            expertly managed PPC campaigns.</span>
                                     </div>
                                 </div>
                             </div>
@@ -740,10 +739,9 @@
                                 <div class="col-md-8">
                                     <div class="card-body">
                                         <h5 class="card-title">Social Media Marketing</h5>
-                                        <span class="card-text">By adopting web content management
-                                            systems such as WordPress, Joomla, Drupal, and others,
-                                            website content can be updated by persons without any
-                                            technical knowledge of website design.
+                                        <span class="card-text">Elevate your brand with Social Media Marketing. Engage
+                                            your audience, grow your online presence, and drive real results with our
+                                            tailored strategies
                                         </span>
                                     </div>
                                 </div>
@@ -757,19 +755,18 @@
                                     <img src="assets/img/service/33.jpg" class="img-fluid rounded-start" alt="...">
                                 </div>
                                 <div class="col-md-8">
-                                    <div class="card-body">Content Marketing<h5 class="card-title">
+                                    <div class="card-body"><h5 class="card-title">Content Marketing
                                         </h5>
-                                        <span class="card-text">Make your visitors into customers with
-                                            our comprehensive e-commerce features, including payment
-                                            PSD templates, stock tracking, and detailed reporting
-                                            tools.
+                                        <span class="card-text">Transform your brand with Content Marketing. Deliver
+                                            value-driven content, engage your audience, and convert leads into loyal
+                                            customers with our expert strategies.
                                         </span>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                   
+
 
                     <div class="col-md-8 large-card">
                         <div class="card mb-3">
@@ -780,11 +777,9 @@
                                 <div class="col-md-8">
                                     <div class="card-body">
                                         <h5 class="card-title">Email Marketing</h5>
-                                        <span class="card-text">In UI/UX solutions Minds On
-                                            concentrates on making the design aesthetic and
-                                            functional. Our work involves the creation of designs
-                                            that meet the client’s desires concerning their targeted
-                                            customers besides helping them to meet their targets.
+                                        <span class="card-text">Maximize your brand’s impact with digital marketing
+                                            strategies powered by insightful data. Unlock customer potential, drive
+                                            conversions, and boost ROI using advanced card data analytics.
                                         </span>
                                     </div>
                                 </div>
@@ -881,7 +876,7 @@
                                 based in your country or an international company that wants to sell your products
                                 around the world, welcome to Digital Minds On.</p>
                         </div>
-                    
+
                         <div class="service__details__button" data-aos="fade-up" data-aos-duration="1500">
                             <a class="default__button" href="#">GET A FREE QUOTE</a>
                         </div>
