--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>Digital Minds On</title>
-    <meta name="description" content="Digitalminds on">
+    <meta name="description" content="igital Minds On offers expert graphic design and web development services, helping businesses create stunning visuals and build dynamic, user-friendly websites.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="shortcut icon" type="image/x-icon" href="assets/img/logo/icon.svg">
@@ -537,7 +537,7 @@
                                     </div>
                                     <div class="col-md-8">
                                         <div class="card-body">
-                                            <h5 class="card-title">Web Development</h5>
+                                            <h5 class="card-title" >Web Development</h5>
                                             <span class="card-text">Special web design solutions that let you have safe,
                                                 effective, and usable web sites, optimised for brand promotion and use.
                                             </span>
